[package]
name = "cosmos"
version = "0.1.0"
authors = ["Miguel Molina <miguel@erizocosmi.co>"]

[dependencies]
bcrypt = "0.2.0"
chrono = "0.4.2"
actix-web = "0.6.10"
uuid = "0.6.5"
serde_derive = "1.0.62"
serde = "1.0.62"
diesel = { version = "1.3.0", features = ["postgres", "chrono", "uuid"] }
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
regex = "1.0.0"
lazy_static = "1.0.0"
dotenv = "0.12.0"
